@@ -1,3 +1,15 @@
+Mon Nov 02 17:53:59 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/cachemanager/generic.py,xappy/cachemanager/xapian_manager.py,
+	  xappy/unittests/cachemanager.py: Modify the
+	  KeyValueStoreCacheManager to be a UserDict.DictMixin subclass,
+	  and use the standard __getitem__, etc, accessors.  It doesn't
+	  quite match the API contract of DictMixin because all keys are
+	  always present as far as getitem and delitem are concerned: their
+	  value is '' if they haven't already been assigned to, and
+	  deleting just sets the value to ''.  However, it's close enough
+	  that this is useful for debugging purposes.
+
 Mon Nov 02 17:15:08 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/cachemanager.py,xappy/cachemanager/__init__.py,
